# cpp-executable

./: meson.build  readme.md
src/: meson.build
src/main/exe/: main.cc  meson.build
