###################################################################################
#                                                                                 #
# NAME: src/main/meson.build                                                      #
#                                                                                 #
# AUTHOR: Michael Brockus.                                                        #
#                                                                                 #
# CONTACT: <mailto:michael@squidfarts.com>                                        #
#                                                                                 #
# NOTICES:                                                                        #
#                                                                                 #
# License: Apache 2.0 :http://www.apache.org/licenses/LICENSE-2.0                 #
#                                                                                 #
###################################################################################



exe_inc = []
exe_src = [ 'main.cc' ]



exe_main = executable('exe', 
    sources: [ exe_src, exe_inc ],
    include_directories: exe_dir,
    install: true)



test('Test exe', exe_main)